--- a/oster.html
+++ b/oster.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ambiente zerado</title>
 </head>
-
 <body id="home-page" class="home os_desktop">
-  <p>
-    Essa página carrega os scripts impulse em isolamento, para determinar o tempo de carregamento demandado por cada.
-  </p>
-  <p> Abra o terminal</p>
-
-  <p>Abaixo, as divs chaordic</p>
   <div chaoridc="top"></div>
   <div chaordic="middle"></div>
   <div chaordic="bottom"></div>
   <script async defer src="//suite.linximpulse.net/impulse/impulse.js" data-apikey="oster-cl"></script>
 </body>
-
 </html>
